# AI_Voice_Chat

./: .gitignore  CLAUDE.md  backends.example.json  backends.py  conversation_graph.py  curriculum.py  exercises.py  final_plan.md  kokoro_pipeline_source.txt  llm.py  main.py  pyproject.toml  requirements.txt  run.py  session_core.py  session_graphs.py  setup.ps1  start.bat
audio_recorder/: README.md  record.py  requirements.txt
kokoro/: tts.py
piper/: download_voices.ps1  download_voices.sh  tts.py
remote/: piper_server.py
web/: app_factory.py  demo.py  demo_manuscript.json  demo_session.py  server.py  session.py
web/static/: index.html
web/static/css/: app.css
web/static/js/: app.js  audio-capture.js  audio-playback.js
web/static/js/worklet/: pcm-recorder-processor.js
